tutor stats job finished and endpoint created for it to call
